--- a/.gitignore
+++ b/.gitignore
@@ -866,3 +866,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudio,visualstudiocode,sublimetext
+*.json
