--- a/.gitignore
+++ b/.gitignore
@@ -867,3 +867,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudio,visualstudiocode,sublimetext
 *.json
+*.iml
+*.xml
